tests/fixtures/negative/style/ForbiddenNamedParam.kt
package style

fun example(value: Int) {
    require(value > 0)
    check(value != -1)
}
